Fix navbar logo display issue on safari

--- a/resources/sass/custom_frontend.sass
+++ b/resources/sass/custom_frontend.sass
@@ -16,3 +16,7 @@
 nav.pagination
   .pagination-link, .pagination-previous, .pagination-next
     font-weight: 400
+
+.navbar-brand
+  .image img
+    width: auto
